@@ -1,5 +1,5 @@
 ;; you'll need to run the script at `deps/lein-to-deps` after changing any dependencies
-(def netty-version "4.1.130.Final")
+(def netty-version "4.2.10.Final")
 (def brotli-version "1.20.0")
 
 
@@ -18,16 +18,19 @@
                  [io.netty/netty-transport-native-epoll ~netty-version :classifier "linux-x86_64"]
                  [io.netty/netty-transport-native-epoll ~netty-version :classifier "linux-aarch_64"]
                  [io.netty/netty-transport-native-kqueue ~netty-version :classifier "osx-x86_64"]
-                 [io.netty.incubator/netty-incubator-transport-native-io_uring "0.0.26.Final" :classifier "linux-x86_64"]
-                 [io.netty.incubator/netty-incubator-transport-native-io_uring "0.0.26.Final" :classifier "linux-aarch_64"]
-                 [io.netty/netty-codec ~netty-version]
+                 [io.netty/netty-transport-native-kqueue ~netty-version :classifier "osx-aarch_64"]
+                 [io.netty/netty-transport-native-io_uring ~netty-version :classifier "linux-x86_64"]
+                 [io.netty/netty-transport-native-io_uring ~netty-version :classifier "linux-aarch_64"]
                  [io.netty/netty-codec-http ~netty-version]
                  [io.netty/netty-codec-http2 ~netty-version]
+                 [io.netty/netty-codec-compression ~netty-version]
                  [io.netty/netty-handler ~netty-version]
                  [io.netty/netty-handler-proxy ~netty-version]
                  [io.netty/netty-resolver ~netty-version]
                  [io.netty/netty-resolver-dns ~netty-version]
                  [metosin/malli "0.20.0" :exclusions [org.clojure/clojure]]]
+  :exclusions [org.bouncycastle/bcprov-jdk15on
+               org.bouncycastle/bcpkix-jdk15on]
   :profiles {:dev                 {:dependencies [[criterium "0.4.6"]
                                                   [cheshire "6.1.0"]
                                                   [org.slf4j/slf4j-simple "2.0.17"]
@@ -37,7 +40,8 @@
                                                   [org.bouncycastle/bcprov-jdk18on "1.83"]
                                                   [org.bouncycastle/bcpkix-jdk18on "1.83" :exclusions [org.bouncycastle/bcutil-jdk18on]]
                                                   ;;[org.bouncycastle/bctls-jdk18on "1.75"]
-                                                  [io.netty/netty-tcnative-boringssl-static "2.0.74.Final"]
+                                                  [io.netty/netty-tcnative-boringssl-static "2.0.75.Final"]
+                                                  [io.netty/netty-pkitesting ~netty-version]
                                                   ;;[com.aayushatharva.brotli4j/all ~brotli-version]
                                                   [com.aayushatharva.brotli4j/brotli4j ~brotli-version]
                                                   [com.aayushatharva.brotli4j/service ~brotli-version]
@@ -66,6 +70,8 @@
                                          "-Dio.netty.allocator.type=unpooled"]}
              :dropped-error-deferred-detection {:jvm-opts ["-Dorg.slf4j.simpleLogger.log.manifold.debug=warn"
                                                            "-Daleph.testutils.detect-dropped-error-deferreds=true"]}
+             :test-unsafe-deny    {:jvm-opts ["--sun-misc-unsafe-memory-access=deny"]}
+             :jdk-21              {:javac-options ^:replace ["--release" "11"]}
              :pedantic            {:pedantic? :abort}
              :trace               {:jvm-opts ["-Dorg.slf4j.simpleLogger.defaultLogLevel=trace"]}
              :profile             {:dependencies [[com.clojure-goes-fast/clj-async-profiler "1.7.0"]]
